fixed x to burger transition overlap

--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -64,7 +64,6 @@
   cursor: pointer;
   background-color: rgba(0,0,0,0);
   color: white;
-  padding: 10px 15px;
   border: none;
   position: absolute;
   top: 1px;
@@ -83,7 +82,6 @@
   cursor: pointer;
   background-color: rgba(0,0,0,0);
   color: white;
-  padding: 10px 15px;
   border: none;
   position: absolute;
   top: 1px;
